# HeapDumpStarDiver

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  pyproject.toml
.agent/skills/heap-analysis/: SKILL.md
.claude/skills/heap-analysis/: SKILL.md
.github/workflows/: ci.yml
mcp_server/: __init__.py  analysis.py  heap_state.py  server.py
scripts/: analyze_heap_parquet.py
src/: hprof_index.rs  main.rs  util.rs
src/commands/: count_records.rs  dump_objects.rs  dump_to_parquet.rs  mod.rs
test-heap-generator/: build-and-run.sh  sources.txt
test-heap-generator/src/com/heaptest/: Main.java
test-heap-generator/src/com/heaptest/analytics/: Anomaly.java  Dashboard.java  DataPoint.java  ExportJob.java  MetricDefinition.java  Report.java  Trend.java  Widget.java
test-heap-generator/src/com/heaptest/comms/: Announcement.java  Attachment.java  Channel.java  ChatRoom.java  ContactList.java  EmailTemplate.java  Message.java  Notification.java  SurveyResponse.java
test-heap-generator/src/com/heaptest/core/: Address.java  AuditableEntity.java  BaseEntity.java  Configuration.java  CoreEnums.java  DateRange.java  IdGenerator.java  Identifiable.java  TaggableEntity.java  Timestamped.java
test-heap-generator/src/com/heaptest/finance/: Account.java  Budget.java  Currency.java  FinancialReport.java  Invoice.java  Ledger.java  LedgerEntry.java  LineItem.java  PaymentMethod.java  TaxRecord.java  Transaction.java
test-heap-generator/src/com/heaptest/hr/: Attendance.java  Benefits.java  Contractor.java  Employee.java  EmployeeDirectory.java  LeaveRequest.java  (+6 more)
(+50 files in other folders)
