[package]
name = "HeapDumpStarDiver"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
arrow-array = "54.0.0"
arrow-schema = "54.0.0"
jvm-hprof = { version = "0.1.0", path = "../../bitbucket/jvm-hprof-rs-li-hackweek" }
memmap = "0.7.0"
parquet = "54.0.0"
clap = "4.5.27"
rayon = "1.10"
dashmap = "6"
crossbeam-channel = "0.5"
