[project]
name = "heapdump-stardiver-mcp"
version = "0.1.0"
description = "MCP server for HeapDumpStarDiver - JVM heap dump analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "duckdb>=1.0.0",
]

[project.scripts]
heapdump-stardiver-mcp = "mcp_server.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_server*"]
